Changed tag/class affected in media query from img to profilepic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ form {
     .container-main {
         width: 80%;
     }
-    .container-main img {
+    .profilepic {
         width: 50%;
         height: 50%;
     }
